--- a/HealthySettle/HealthySettle/Info.plist
+++ b/HealthySettle/HealthySettle/Info.plist
@@ -62,6 +62,8 @@
 	</array>
 	<key>CFBundleVersion</key>
 	<string>1</string>
+	<key>UIViewControllerBasedStatusBarAppearance</key>
+	<true/>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSAppTransportSecurity</key>
