--- a/HealthySettle/HealthySettle/Info.plist
+++ b/HealthySettle/HealthySettle/Info.plist
@@ -52,11 +52,13 @@
 			</array>
 		</dict>
 		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
 			<key>CFBundleURLName</key>
 			<string>ali</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>alisdkdemo</string>
+				<string>yyl_ali</string>
 			</array>
 		</dict>
 	</array>
